@@ -62,7 +62,7 @@ chinstdir     = /D=#INSTALL_DIR#
 uninstall     = Gaim
 uninstparam   = /S _?=#INSTALL_DIR#
 
-[Miranda IM]
+[Miranda]
 
 category      = Internet
 describe      = Multi-protocol IM Client
@@ -106,6 +106,22 @@ upgrades      = true
 chinstdir     =
 uninstall     = Mozilla Thunderbird (#MAJORMINOR_VERSION#)
 uninstparam   = -ms
+
+[WinSCP]
+
+category      = Internet
+describe      = SFTP Client
+website       = http://winscp.net/
+scrape        = http://winscp.net/eng/download.php
+version       = WinSCP ([0-9]\.[0-9]\.[0-9])
+download      = http://easynews.dl.sourceforge.net/sourceforge/winscp/
+filename      = winscp#DOTLESS_VERSION#setup.exe
+referer       = http://prdownloads.sourceforge.net/winscp/
+instparam     = /S
+upgrades      = false
+chinstdir     = /D=#INSTALL_DIR#
+uninstall     = winscp#MAJOR_VERSION#_is1
+uninstparam   = /S _?=#INSTALL_DIR#
 
 ; #############################
 ; Entertainment
@@ -261,9 +277,9 @@ download      = http://easynews.dl.sourceforge.net/sourceforge/cream/
 filename      = gvim-#VERSION#.exe
 instparam     = /S
 upgrades      = false
-chinstdir     = /D=#INSTALL_DIR#
+chinstdir     =
 uninstall     = Vim #DASHTODOT_VERSION#
-uninstparam   = /S _?=#INSTALL_DIR#
+uninstparam   = /S
 
 ; #############################
 ; Utilities
@@ -368,6 +384,7 @@ uninstparam   = /S _?=#INSTALL_DIR#
 ; version       =
 ; download      =
 ; filename      =
+; referer       =
 ; instparam     =
 ; upgrades      =
 ; chinstdir     =
@@ -382,6 +399,7 @@ uninstparam   = /S _?=#INSTALL_DIR#
 ; version       - Regular expression to match the version format
 ; download      - Web URL from where application can be downloaded
 ; filename      - Filename of the application at the download URL
+; referer       - Web URL to set as the referer for the download URL (defaults to scrape)
 ; instparam     - Flags to append for install
 ; upgrades      - true: application upgrades itself, false: uninstall then install
 ; chinstdir     - Flags to specify the install directory
